# ayurvedic-clinical-bridge

./: .env.example  .gitignore  Dockerfile  README.md  compile_knowledge.py  docker-compose.yml  pyproject.toml  requirements.txt  run_auth_api.py
ayurvedic_clinical_bridge/: __init__.py
ayurvedic_clinical_bridge/api/: __init__.py  admin_routes.py  analysis_routes.py  auth_routes.py  knowledge_routes.py  main_with_auth.py  medicine_mapping_routes.py  model_routes.py  prescription_routes.py  safety_analysis_routes.py
ayurvedic_clinical_bridge/data/: __init__.py  dataset_integration.py  prescription_input.py
ayurvedic_clinical_bridge/middleware/: __init__.py  auth_middleware.py  security.py  service_orchestration.py  validation.py
ayurvedic_clinical_bridge/services/: __init__.py  auth_service.py  confidence_scorer.py  cross_domain_mapper.py  integrated_knowledge_system_optimized.py  knowledge_compiler.py  medicine_mapper.py  prescription_service_optimized.py  safety_analyzer_optimized.py
ayurvedic_clinical_bridge/training/: __init__.py  metrics_collector.py  nlp_metrics.py  training_with_metrics.py
ayurvedic_clinical_bridge/utils/: privacy_handler.py
config/: __init__.py  settings.py
data/cache/nadakandrew___ayurvedicmeals/default/0.0.0/5146ce641e59280b2d997b54bd72c8607e06ec38/: ayurvedicmeals-augmented.arrow  ayurvedicmeals-original.arrow
data/datasets/: ayurgenixai_processed.csv  ayurvedic_meals_processed.csv  ayurvedic_remedies_processed.csv  datasets_metadata.yaml
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/: Comparison.tsx  Login.tsx  QueryForm.tsx  Results.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminVerification.tsx  Auth.tsx  Clinicians.tsx  GeneralUsers.tsx  MedicineMapping.tsx  ModelComparison.tsx
